Fix word spacing on desktop

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -26,9 +26,9 @@
 .about-me p {
   font-size: 33px;
   font-weight: 600;
-  line-height: 45px;  /* increase from 36px */
-  letter-spacing: normal; /* remove the 1px spacing */
-  word-spacing: justify;  /* add this */
+  line-height: 45px;
+  letter-spacing: normal;
+  word-spacing: 0.1em;
 }
 
 @media only screen and (min-width: 600px) {
@@ -60,16 +60,20 @@
     width: 50%;
   }
   .about-me p {
-  font-size: 1.9vw;
-  line-height: 2.3vw;
-  word-spacing: 0.3vw; /* add this */
+    font-size: 1.9vw;
+    line-height: 2.3vw;
+  }
+  .split-line {
+    word-spacing: 0.3vw;
+  }
 }
 
-}
 @media only screen and (min-width: 1950px) {
   .about-me p {
     font-size: 2.5rem;
     line-height: 2.7rem;
+  }
+  .split-line {
     word-spacing: 0.3rem;
   }
 }
